Shows Tmux gifs.

--- a/index.html
+++ b/index.html
@@ -723,37 +723,37 @@ and related. As reported in the guide (<code>:help rails-alternate</code>):</p>
 
 <thead>
 <tr>
-  <th style="text-align:left;">Current file</th>
-  <th style="text-align:left;">Alternate file</th>
-  <th style="text-align:left;">Related file</th>
+	<th style="text-align:left;">Current file</th>
+	<th style="text-align:left;">Alternate file</th>
+	<th style="text-align:left;">Related file</th>
 </tr>
 </thead>
 
 <tbody>
 <tr>
-  <td style="text-align:left;">model</td>
-  <td style="text-align:left;">unit test</td>
-  <td style="text-align:left;">schema definition</td>
+	<td style="text-align:left;">model</td>
+	<td style="text-align:left;">unit test</td>
+	<td style="text-align:left;">schema definition</td>
 </tr>
 <tr>
-  <td style="text-align:left;">controller (in method)</td>
-  <td style="text-align:left;">functional test</td>
-  <td style="text-align:left;">template (view)</td>
+	<td style="text-align:left;">controller (in method)</td>
+	<td style="text-align:left;">functional test</td>
+	<td style="text-align:left;">template (view)</td>
 </tr>
 <tr>
-  <td style="text-align:left;">template (view)</td>
-  <td style="text-align:left;">functional test</td>
-  <td style="text-align:left;">controller (jump to method)</td>
+	<td style="text-align:left;">template (view)</td>
+	<td style="text-align:left;">functional test</td>
+	<td style="text-align:left;">controller (jump to method)</td>
 </tr>
 <tr>
-  <td style="text-align:left;">migration</td>
-  <td style="text-align:left;">previous migration</td>
-  <td style="text-align:left;">next migration</td>
+	<td style="text-align:left;">migration</td>
+	<td style="text-align:left;">previous migration</td>
+	<td style="text-align:left;">next migration</td>
 </tr>
 <tr>
-  <td style="text-align:left;">config/database.yml</td>
-  <td style="text-align:left;">config/routes.rb</td>
-  <td style="text-align:left;">config/environments/*.rb</td>
+	<td style="text-align:left;">config/database.yml</td>
+	<td style="text-align:left;">config/routes.rb</td>
+	<td style="text-align:left;">config/environments/*.rb</td>
 </tr>
 </tbody>
 </table>
@@ -887,6 +887,12 @@ of exceptions:</p>
 a convention, this document will call this shortcut &#8216;prefix&#8217;, so <code>prefix-c</code>
 means &#8216;press Ctrl-a, then c&#8217;.</p>
 
+<figure>
+<img src="https://raw.github.com/New-Bamboo/Hermes/gh-pages/images/hermes/tmux-windows.gif" alt="Using Tmux windows" />
+<figcaption>Using Tmux windows</figcaption></figure>
+
+
+
 <p>Here are some basic commands:</p>
 
 <ul>
@@ -906,6 +912,12 @@ means &#8216;press Ctrl-a, then c&#8217;.</p>
 
 <p>You can also change focus from one pane to another using the mouse, however that
 is usually slower than mastering keyboard shortcuts.</p>
+
+<figure>
+<img src="https://raw.github.com/New-Bamboo/Hermes/gh-pages/images/hermes/tmux-panes.gif" alt="Using Tmux panes" />
+<figcaption>Using Tmux panes</figcaption></figure>
+
+
 
 <h3 id="scrollingcopyandpaste">Scrolling, copy and paste</h3>
 
@@ -937,6 +949,12 @@ habits.</p>
 <li><code>v</code> initiates visual selection, so that you can select a visual portion of
  text and then, for example, press <code>y</code> to copy it.</li>
 </ul>
+
+<figure>
+<img src="https://raw.github.com/New-Bamboo/Hermes/gh-pages/images/hermes/tmux-copy-mode.gif" alt="Using Tmux copy mode" />
+<figcaption>Using Tmux copy mode</figcaption></figure>
+
+
 
 <p>To see a list of all possible combinations, press <code>prefix-:</code> to enter command
 mode and type <code>list-keys -t vi-copy</code>. Note also that a good set of motions are
@@ -1011,8 +1029,6 @@ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</p>
 <h1 id="copyright">Copyright</h1>
 
 <p>Copyright ©2012 New Bamboo Web Development Limited</p>
-
-      </section>
 
 
     </div>
